--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,15 @@
 trigger:
 – master
 pool:
-  vmImage: 'windows-2019'
+    vmImage: 'windows-2019'
 steps:
 – script: |
     git config –global core.longpaths true
-    git config –global user.email "your email"
-    git config –global user.name "your github user name"
+    git config –global user.email "leduardovieirab@gmail.com"
+    git config –global user.name "leduardovb"
     git checkout master
     git pull –all
     git add .
     git commit -m "sync from azure devops"
-    git push https://$(git_token)@github.com/user_name/repo_name.git -f
+    git push https://$(git_token)@github.com/leduardovb/repo_name.git -f
   displayName: 'Run git sync'
