--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,14 @@
-trigger:
-– master
-
+trigger: 
+- master
 steps:
-– script: |
-    git config –global core.longpaths true
-    git config –global user.email "leduardovieirab@gmail.com"
-    git config –global user.name "leduardovb"
-    git checkout master
-    git pull –all
-    git add .
-    git commit -m "sync from azure devops"
-    git push https://$(git_token)@github.com/leduardovb/repo_name.git -f
-    -displayName: 'Run git sync'
+    - script: |
+        git config –global core.longpaths true
+        git config –global user.email "your email"
+        git config –global user.name "your github user name"
+        git checkout master
+        git pull –all
+        git add .
+        git commit -m "sync from azure devops"
+        git push https://$(git_token)@github.com/user_name/repo_name.git -f
+pool:
+    vmImage: 'windows-2019'
